<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quizapp"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
     />
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@color/white"
         app:cardCornerRadius="8dp"
         app:cardElevation="5dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp"
             >

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/welcome"
               android:textAlignment="center"
               android:textColor="@color/darkerGrey"
               android:textSize="30sp"
               android:textStyle="bold"
               />

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/please_enter_your_name"
                 android:textAlignment="center"
                 android:textColor="@color/lighterGrey"
                 android:textSize="16sp"
                 tools:ignore="TextContrastCheck" />

           <!-- textInputLayout is prepration for our actual edit text  -->
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 >
<!--                 compatible to all the versions-->
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/et_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/name"
                     android:imeOptions="actionGo"
                     android:inputType="textCapWords"
                     android:textColor="@color/darkerGrey"
                     android:textColorHint="@color/lighterGrey" />


             </com.google.android.material.textfield.TextInputLayout>

             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn"
                 android:layout_marginTop="16dp"
                 android:background="@color/colorPrimary"
                 android:text="@string/start"
                 android:textSize="18sp"
                 android:textColor="@color/white"
                 >


             </Button>




         </LinearLayout>


     </androidx.cardview.widget.CardView>

</LinearLayout>